Fix safari overflow bug

--- a/src/styles/modules/default.scss
+++ b/src/styles/modules/default.scss
@@ -48,7 +48,7 @@ ul, ol {
     padding: 0 $padding--1;
 }
 
-@media (max-width: $maxWidth--phone) {
+@media (max-width: $maxWidth--tablet) {
 
     .ContentPadding {
         padding: 0 $padding--2;
