--- a/src/styles/modules/navigation.scss
+++ b/src/styles/modules/navigation.scss
@@ -1,32 +1,43 @@
 @import "src/styles/config";
 
 .Navigation__section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     width: 100%;
     padding: $padding--2 $padding--1;
+}
 
-    .Navigation__ol {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-end;
+.Navigation__nav {
+    width: 100%;
+}
 
-        li {
-            text-align: center;
-            margin-left: 5px;
+.Navigation__ol {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
 
-            a {
-                padding: 5px;
-                transition: color 0.3s;
-            }
+    li {
+        text-align: center;
 
-            a:hover {
-                color: $color--3;
-                border-bottom: solid 2px $color--3;
-            }
+        a {
+            padding: 5px;
+            transition: color 0.3s;
         }
+
+        a:hover {
+            color: $color--3;
+            border-bottom: solid 2px $color--3;
+        }
+    }
+
+    li:not(:first-child) {
+        margin-left: 5px;
     }
 }
 
 @media (max-width: $maxWidth--phone) {
+
     .Navigation__section {
         padding: $padding--2 $padding--2;
     }
