--- a/src/styles/modules/portfolio.scss
+++ b/src/styles/modules/portfolio.scss
@@ -48,6 +48,7 @@
     overflow: hidden;
     background-color: $color--4;
     border-radius: $borderRadius--1;
+    -webkit-mask-image: -webkit-radial-gradient(white, black);
 
     &:hover .Portfolio__img {
         transform: scale(1.02);
